--- a/clinica_online/src/index.html
+++ b/clinica_online/src/index.html
@@ -12,5 +12,6 @@
   <app-root></app-root>
   <script src="https://kit.fontawesome.com/aa234fad53.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rubik">
 </body>
 </html>
