--- a/clinica_online/src/index.html
+++ b/clinica_online/src/index.html
@@ -8,6 +8,8 @@
   <link rel="icon" type="image/x-icon" href="assets/img/doc.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <script src="https://unpkg.com/jspdf@latest/dist/jspdf.umd.min.js"></script>
+  <link href="http://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css" rel="stylesheet" type="text/css" />
+  <link href='http://fonts.googleapis.com/css?family=Oxygen:300' rel='stylesheet' type='text/css'>
 
 </head>
 <body>
